--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,13 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+    margin:0;
+}
+
+.container {
+    display:flex;
+    grid-gap:15px;
+    flex-wrap: wrap;
+}
+
+h1 {
+    text-align: center;
+}
