--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,5 +1,5 @@
-header {
+footer {
     background: linear-gradient( grey, rgb(222, 221, 221));
-    height:80px;
-    margin-bottom: 4%;
+    height:50px;
+    margin-top: 4%;
 }
