--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,8 +6,10 @@ body {
     display:flex;
     grid-gap:15px;
     flex-wrap: wrap;
+    justify-content: center;
 }
 
 h1 {
     text-align: center;
+    margin-bottom: 3%;
 }
