--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,24 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Annuaire</title>
-</head>
-<body>
+
   <app-header></app-header>
   <h1>Annuaire angular</h1>
-  <div class="container">
-    <app-card></app-card>
-    <app-card></app-card>
-    <app-card></app-card>
-    <app-card></app-card>
-    <app-card></app-card>
-    <app-card></app-card>
-    <app-card></app-card>
-    <app-card></app-card>
+  <div>
+    <app-card-list  class="container" ></app-card-list>
   </div>
   <app-footer></app-footer>
-</body>
-</html>
