--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -1,15 +1,20 @@
-<div class="card">
-  <div class="CardHeader">
-    <img src="../../assets/{{image}}" alt="photo de Magalie Cardonet" />
-    <h2>Magalie Cardonet</h2>
+
+  <div class="card" [ngClass]="{
+    'supplier' : card.typeContract === 'fournisseur',
+    'client' : card.typeContract === 'client'
+ }">
+    <div class="CardHeader">
+      <img src="../../assets/{{card.image}}" alt="photo du contact" />
+      <h2>{{card.name}} {{card.firstname}}</h2>
+    </div>
+    <div class="cardBody">
+      <p class="h3">Age : </p><p>{{card.age}} ans</p>
+      <br>
+      <p class="h3">Adresse : </p> <p>{{card.address}}</p>
+      <br>
+      <p class="h3">Téléphone : </p> <p> {{card.tel}}</p>
+      <br>
+      <p class="h3">Type de contact : </p> <p>{{card.typeContract}}</p>
+    </div>
   </div>
-  <div class="cardBody">
-    <p class="h3">Age :</p><p>{{age}} ans</p>
-    <br>
-    <p class="h3">Adresse : </p> <p>{{address}}</p>
-    <br>
-    <p class="h3">Téléphone : </p> <p> {{tel}}</p>
-    <br>
-    <p class="h3">Type de contact :</p> <p>{{typeContract}}</p>
-  </div>
-</div>
+
