--- a/src/app/card/card.component.scss
+++ b/src/app/card/card.component.scss
@@ -31,3 +31,11 @@ img {
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
 }
+
+.supplier {
+    background-color: aquamarine;
+}
+
+.client {
+    background-color:rgb(168, 243, 147);
+}
