updated services, added routes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,6 @@
   <app-header></app-header>
   <h1>Annuaire angular</h1>
   <div>
-    <app-card-list  class="container" ></app-card-list>
+    <router-outlet></router-outlet>
   </div>
   <app-footer></app-footer>
