--- a/src/app/card-info/card-info.component.html
+++ b/src/app/card-info/card-info.component.html
@@ -1,1 +1,22 @@
-<p>card-info works!</p>
+<div class="centerCard">
+<div class="card" [ngClass]="{
+    'supplier' : card.typeContract === 'fournisseur',
+    'client' : card.typeContract === 'client'
+ }">
+    <div class="CardHeader">
+      <img src="../../assets/{{card.image}}" alt="photo du contact" />
+      <h2>{{card.name}} {{card.firstname}}</h2>
+    </div>
+    <div class="cardBody">
+      <p class="h3">Age : </p><p>{{card.age}} ans</p>
+      <br>
+      <p class="h3">Adresse : </p> <p>{{card.address}}</p>
+      <br>
+      <p class="h3">Téléphone : </p> <p> {{card.tel}}</p>
+      <br>
+      <p class="h3">Type de contact : </p> <p>{{card.typeContract}}</p>
+    </div>
+  </div>
+</div>
+
+
