--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -1,4 +1,5 @@
 
+<a (click)="navigateById()">
   <div class="card" [ngClass]="{
     'supplier' : card.typeContract === 'fournisseur',
     'client' : card.typeContract === 'client'
@@ -7,14 +8,5 @@
       <img src="../../assets/{{card.image}}" alt="photo du contact" />
       <h2>{{card.name}} {{card.firstname}}</h2>
     </div>
-    <div class="cardBody">
-      <p class="h3">Age : </p><p>{{card.age}} ans</p>
-      <br>
-      <p class="h3">Adresse : </p> <p>{{card.address}}</p>
-      <br>
-      <p class="h3">Téléphone : </p> <p> {{card.tel}}</p>
-      <br>
-      <p class="h3">Type de contact : </p> <p>{{card.typeContract}}</p>
-    </div>
   </div>
-
+</a>
