--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,3 +13,45 @@ h1 {
     text-align: center;
     margin-bottom: 3%;
 }
+
+.card {
+    width:250px;
+    max-height:350px;
+    border:rgb(215, 215, 215) solid 1.5px;
+    box-shadow: 2px;
+    border-radius: 20px;
+}
+
+.card h2 {
+    text-align: center;
+}
+
+.h3 {
+    font-weight:600;
+}
+
+.card p {
+    display: inline;
+    line-height:1.5em;
+}
+
+.cardBody {
+    padding-inline-start: 20px;
+}
+
+img {
+    margin-left: -1.5px;
+    margin-top:-1.5px;
+    width:252px;
+    height: 150px;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+}
+
+.supplier {
+    background-color: aquamarine;
+}
+
+.client {
+    background-color:rgb(168, 243, 147);
+}
