--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
 
+<div class="organizePage">
   <app-header></app-header>
-  <h1>Annuaire angular</h1>
   <div>
+    <h1>Annuaire angular</h1>
     <router-outlet></router-outlet>
   </div>
   <app-footer></app-footer>
+</div>  
