--- a/src/app/card-list/card-list.component.html
+++ b/src/app/card-list/card-list.component.html
@@ -1,3 +1,6 @@
+<a routerLink="formulaire-contact">
+    <button class="addContactButton">Nouveau contact</button> 
+</a>
 <div class="container">
 <div *ngFor="let contact of contacts">
     <app-card [card] = "contact"></app-card>
