--- a/src/app/card-info/card-info.component.html
+++ b/src/app/card-info/card-info.component.html
@@ -1,11 +1,11 @@
 <div class="centerCard">
 <div class="card" [ngClass]="{
-    'supplier' : card.typeContract === 'fournisseur',
-    'client' : card.typeContract === 'client'
+    'supplier' : card.typeContact === 'fournisseur',
+    'client' : card.typeContact === 'client'
  }">
     <div class="CardHeader">
-      <img src="../../assets/{{card.image}}" alt="photo du contact" />
-      <h2>{{card.name}} {{card.firstname}}</h2>
+      <img src="../../assets/{{card.photo}}" alt="photo du contact" />
+      <h2>{{card.lastname}} {{card.firstname}}</h2>
     </div>
     <div class="cardBody">
       <p class="h3">Age : </p><p>{{card.age}} ans</p>
@@ -14,7 +14,7 @@
       <br>
       <p class="h3">Téléphone : </p> <p> {{card.tel}}</p>
       <br>
-      <p class="h3">Type de contact : </p> <p>{{card.typeContract}}</p>
+      <p class="h3">Type de contact : </p> <p>{{card.typeContact}}</p>
     </div>
   </div>
 </div>
