--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,15 @@
-body {
+html,body,:host {
+    min-height:100vh;
+    display:flex;
+    flex-direction: column;
+    justify-content: space-between;
     margin:0;
+}
+
+footer {
+    background: linear-gradient( grey, rgb(222, 221, 221));
+    height:50px;
+    margin-top: 5%;
 }
 
 .container {
@@ -54,4 +64,30 @@ img {
 
 .client {
     background-color:rgb(168, 243, 147);
+}
+
+.addContactButton {
+    margin: 3%;
+}
+
+.containerForm {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.addContactForm {
+    border: grey 2px solid;
+    padding:0 3% 3% 3%;
+    border-radius: 20px;
+    line-height: 3rem;
+    background-color: rgb(255, 255, 246);
+}
+
+.addContactForm h2 {
+    text-align: center;
+}
+
+.center {
+    text-align: center;
 }
